# ExoMy_Software

config/: exomy.yaml
docker/: Dockerfile  entrypoint.sh  i2c_fix.py  nohup.out  run_exomy.sh
exomy/config/: exomy.yaml
exomy/exomy/: joystick_parser_node.py  motor_node.py  motors.py
exomy/launch/: exomy.launch.py
exomy/scripts/: cam_test.py
exomy_msgs/: CMakeLists.txt  package.xml
exomy_msgs/msg/: MotorCommands.msg
